# pymf6-tools

./: .gitattributes  .gitignore  LICENSE  pyproject.toml
conda_package/: Makefile
conda_package/pymf6-tools/: meta.yaml
src/pymf6_tools/: __init__.py  base_model.py  main.py  make_model.py  plotting.py
src/pymf6tools/: base_model.py  custom_print.py  main.py  make_model.py  plotting.py  pymf6.code-workspace
tests/: Helpfull_tips.ipynb  control_example_1.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb  river_base.ipynb  river_solute_model.ipynb  river_transport_model.ipynb  test_base.py  test_example_2.py  test_flow_base.py  transport_base.ipynb  transport_base_controlled.ipynb  transport_river_base.ipynb  well_system_transport_model.ipynb
tests/.ipynb_checkpoints/: control_example_1-checkpoint.ipynb  example_1-checkpoint.ipynb  example_2-checkpoint.ipynb  example_3-checkpoint.ipynb  notes-checkpoint.ipynb  river_base-checkpoint.ipynb  river_solute_model-checkpoint.ipynb  river_transport_model-checkpoint.ipynb  test_base-checkpoint.py  test_example_1-checkpoint.py  test_mf6-checkpoint.py  transport_base_controlled-checkpoint.ipynb  transport_river_base-checkpoint.ipynb  well_system_transport_model-checkpoint.ipynb
tests/example_1/: control_example_1.ipynb  example_1.ipynb
tests/internal/: Helpfull_tips.ipynb  notes.ipynb  river_solute_model.ipynb  river_transport_model.ipynb  test_clone.py  transport_base_controlled.ipynb  transport_river_base.ipynb  well_system_transport_model.ipynb
tests/mf6_examples/: README.md  config.ini  config.py  run.py  (+2 more)
(+1789 files in other folders)
